# index-etfs

./: .coderabbit.yaml  AGENTS.md  CLAUDE.md  PLAN.md  README.md  iwm.csv  iwm.md  iwm.txt  mdy.csv  mdy.md  mdy.txt  pyproject.toml  qqq.csv  qqq.md  qqq.txt  renovate.json  spsm.csv  spsm.md  spsm.txt  spy.csv  spy.md  spy.txt
.github/workflows/: ci.yml  data-refresh.yml  main.yml
index_etfs/: holdings.py
metadata/: latest.json
src/index_etfs/: catalog.py  holdings.py  outputs.py  sources.py
tests/: test_holdings.py
tickers/: iwm.txt  mdy.txt  qqq.txt  spsm.txt  spy.txt
watchlists/: nasdaq100-grouped.txt  nasdaq100.txt  russell2000-grouped.txt  russell2000.txt  sp400-grouped.txt  sp400.txt  sp500-grouped.txt  sp500.txt  sp600-grouped.txt  sp600.txt
