[project]
name = "index-etfs"
version = "0.1.0"
description = ""
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas[excel,output-formatting] (>=2.3.0,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
get-holdings = "index_etfs.holdings:main"
