[project]
name = "index-etfs"
version = "0.1.0"
description = ""
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastexcel>=0.14.0",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
get-holdings = "index_etfs.holdings:main"
