[project]
name = "index-etfs"
version = "0.1.0"
description = ""
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastexcel>=0.14.0",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=6.0.0"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
get-holdings = "index_etfs.holdings:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=index_etfs",
    "--cov-report=term-missing",
]
